--- a/app/src/main/res/layout/activity_btech_agriculture_bsc_horticulture_ogpa_calculator.xml
+++ b/app/src/main/res/layout/activity_btech_agriculture_bsc_horticulture_ogpa_calculator.xml
@@ -18,6 +18,9 @@
             android:orientation="vertical">
             <androidx.appcompat.widget.Toolbar
                 app:title="--"
+
+                android:theme="@style/font_bold"
+                style="@style/font_bold"
                 android:background="@color/white"
                 app:titleTextColor="@color/black"
                 app:subtitleTextColor="@color/black"
@@ -43,7 +46,8 @@
                     android:text=""
                     android:textSize="@dimen/_20sdp"
                     android:textAlignment="viewStart"
-                    android:textStyle="bold"
+                    android:theme="@style/font_semi_bold"
+                    style="@style/font_semi_bold"
                     android:textColor="@color/black"
                     android:id="@+id/subject_name_1"
                     android:padding="@dimen/_5sdp"
@@ -57,6 +61,8 @@
                     android:hint="@string/enter_theory_marks"
                     android:textColorHint="@color/black"
                     android:maxLength="8"
+                    android:theme="@style/font_regular"
+                    style="@style/font_regular"
                     android:inputType="numberDecimal"
                     android:textSize="@dimen/_18sdp"
                     android:textAlignment="viewStart"
@@ -75,6 +81,8 @@
                     android:hint="@string/enter_practical_marks"
                     android:textColorHint="@color/black"
                     android:maxLength="8"
+                    android:theme="@style/font_regular"
+                    style="@style/font_regular"
                     android:inputType="numberDecimal"
                     android:textSize="@dimen/_18sdp"
                     android:textAlignment="viewStart"
@@ -103,7 +111,8 @@
                     android:text=""
                     android:textSize="@dimen/_20sdp"
                     android:textAlignment="viewStart"
-                    android:textStyle="bold"
+                    android:theme="@style/font_semi_bold"
+                    style="@style/font_semi_bold"
                     android:textColor="@color/black"
                     android:id="@+id/subject_name_2"
                     android:padding="@dimen/_5sdp"
@@ -117,6 +126,8 @@
                     android:hint="@string/enter_theory_marks"
                     android:textColorHint="@color/black"
                     android:maxLength="8"
+                    android:theme="@style/font_regular"
+                    style="@style/font_regular"
                     android:layout_marginBottom="@dimen/_10sdp"
                     android:inputType="numberDecimal"
                     android:textSize="@dimen/_18sdp"
@@ -135,6 +146,8 @@
                     android:hint="@string/enter_practical_marks"
                     android:textColorHint="@color/black"
                     android:maxLength="8"
+                    android:theme="@style/font_regular"
+                    style="@style/font_regular"
                     android:inputType="numberDecimal"
                     android:textSize="@dimen/_18sdp"
                     android:textAlignment="viewStart"
@@ -163,7 +176,8 @@
                     android:text=""
                     android:textSize="@dimen/_20sdp"
                     android:textAlignment="viewStart"
-                    android:textStyle="bold"
+                    android:theme="@style/font_semi_bold"
+                    style="@style/font_semi_bold"
                     android:textColor="@color/black"
                     android:id="@+id/subject_name_3"
                     android:padding="@dimen/_5sdp"
@@ -178,6 +192,8 @@
                     android:hint="@string/enter_theory_marks"
                     android:textColorHint="@color/black"
                     android:maxLength="8"
+                    android:theme="@style/font_regular"
+                    style="@style/font_regular"
                     android:inputType="numberDecimal"
                     android:textSize="@dimen/_18sdp"
                     android:textAlignment="viewStart"
@@ -195,6 +211,8 @@
                     android:hint="@string/enter_practical_marks"
                     android:textColorHint="@color/black"
                     android:maxLength="8"
+                    android:theme="@style/font_regular"
+                    style="@style/font_regular"
                     android:inputType="numberDecimal"
                     android:textSize="@dimen/_18sdp"
                     android:textAlignment="viewStart"
@@ -223,7 +241,8 @@
                     android:text=""
                     android:textSize="@dimen/_20sdp"
                     android:textAlignment="viewStart"
-                    android:textStyle="bold"
+                    android:theme="@style/font_semi_bold"
+                    style="@style/font_semi_bold"
                     android:textColor="@color/black"
                     android:id="@+id/subject_name_4"
                     android:padding="@dimen/_5sdp"
@@ -237,6 +256,8 @@
                     android:hint="@string/enter_theory_marks"
                     android:textColorHint="@color/black"
                     android:maxLength="8"
+                    android:theme="@style/font_regular"
+                    style="@style/font_regular"
                     android:inputType="numberDecimal"
                     android:textSize="@dimen/_18sdp"
                     android:layout_marginBottom="@dimen/_10sdp"
@@ -255,6 +276,8 @@
                     android:hint="@string/enter_practical_marks"
                     android:textColorHint="@color/black"
                     android:maxLength="8"
+                    android:theme="@style/font_regular"
+                    style="@style/font_regular"
                     android:inputType="numberDecimal"
                     android:textSize="@dimen/_18sdp"
                     android:textAlignment="viewStart"
@@ -283,7 +306,8 @@
                     android:text=""
                     android:textSize="@dimen/_20sdp"
                     android:textAlignment="viewStart"
-                    android:textStyle="bold"
+                    android:theme="@style/font_semi_bold"
+                    style="@style/font_semi_bold"
                     android:textColor="@color/black"
                     android:id="@+id/subject_name_5"
                     android:padding="@dimen/_5sdp"
@@ -298,6 +322,8 @@
                     android:hint="@string/enter_theory_marks"
                     android:textColorHint="@color/black"
                     android:maxLength="8"
+                    android:theme="@style/font_regular"
+                    style="@style/font_regular"
                     android:inputType="numberDecimal"
                     android:textSize="@dimen/_18sdp"
                     android:textAlignment="viewStart"
@@ -315,6 +341,8 @@
                     android:hint="@string/enter_practical_marks"
                     android:textColorHint="@color/black"
                     android:maxLength="8"
+                    android:theme="@style/font_regular"
+                    style="@style/font_regular"
                     android:inputType="numberDecimal"
                     android:textSize="@dimen/_18sdp"
                     android:textAlignment="viewStart"
@@ -343,7 +371,8 @@
                     android:text=""
                     android:textSize="@dimen/_20sdp"
                     android:textAlignment="viewStart"
-                    android:textStyle="bold"
+                    android:theme="@style/font_semi_bold"
+                    style="@style/font_semi_bold"
                     android:textColor="@color/black"
                     android:id="@+id/subject_name_6"
                     android:padding="@dimen/_5sdp"
@@ -358,6 +387,8 @@
                     android:textColorHint="@color/black"
                     android:layout_marginBottom="@dimen/_10sdp"
                     android:maxLength="8"
+                    android:theme="@style/font_regular"
+                    style="@style/font_regular"
                     android:inputType="numberDecimal"
                     android:textSize="@dimen/_18sdp"
                     android:textAlignment="viewStart"
@@ -375,6 +406,8 @@
                     android:hint="@string/enter_practical_marks"
                     android:textColorHint="@color/black"
                     android:maxLength="8"
+                    android:theme="@style/font_regular"
+                    style="@style/font_regular"
                     android:inputType="numberDecimal"
                     android:textSize="@dimen/_18sdp"
                     android:textAlignment="viewStart"
@@ -403,7 +436,8 @@
                     android:text=""
                     android:textSize="@dimen/_20sdp"
                     android:textAlignment="viewStart"
-                    android:textStyle="bold"
+                    android:theme="@style/font_semi_bold"
+                    style="@style/font_semi_bold"
                     android:textColor="@color/black"
                     android:id="@+id/subject_name_7"
                     android:padding="@dimen/_5sdp"
@@ -417,6 +451,8 @@
                     android:hint="@string/enter_theory_marks"
                     android:textColorHint="@color/black"
                     android:maxLength="8"
+                    android:theme="@style/font_regular"
+                    style="@style/font_regular"
                     android:inputType="numberDecimal"
                     android:layout_marginBottom="@dimen/_10sdp"
                     android:textSize="@dimen/_18sdp"
@@ -435,6 +471,8 @@
                     android:hint="@string/enter_practical_marks"
                     android:textColorHint="@color/black"
                     android:maxLength="8"
+                    android:theme="@style/font_regular"
+                    style="@style/font_regular"
                     android:inputType="numberDecimal"
                     android:textSize="@dimen/_18sdp"
                     android:textAlignment="viewStart"
@@ -463,7 +501,8 @@
                     android:text=""
                     android:textSize="@dimen/_20sdp"
                     android:textAlignment="viewStart"
-                    android:textStyle="bold"
+                    android:theme="@style/font_semi_bold"
+                    style="@style/font_semi_bold"
                     android:textColor="@color/black"
                     android:id="@+id/subject_name_8"
                     android:padding="@dimen/_5sdp"
@@ -477,6 +516,8 @@
                     android:hint="@string/enter_theory_marks"
                     android:textColorHint="@color/black"
                     android:maxLength="8"
+                    android:theme="@style/font_regular"
+                    style="@style/font_regular"
                     android:inputType="numberDecimal"
                     android:layout_marginBottom="@dimen/_10sdp"
                     android:textSize="@dimen/_18sdp"
@@ -495,6 +536,8 @@
                     android:hint="@string/enter_practical_marks"
                     android:textColorHint="@color/black"
                     android:maxLength="8"
+                    android:theme="@style/font_regular"
+                    style="@style/font_regular"
                     android:inputType="numberDecimal"
                     android:textSize="@dimen/_18sdp"
                     android:textAlignment="viewStart"
@@ -523,7 +566,8 @@
                     android:text=""
                     android:textSize="@dimen/_20sdp"
                     android:textAlignment="viewStart"
-                    android:textStyle="bold"
+                    android:theme="@style/font_semi_bold"
+                    style="@style/font_semi_bold"
                     android:textColor="@color/black"
                     android:id="@+id/subject_name_9"
                     android:padding="@dimen/_5sdp"
@@ -538,6 +582,8 @@
                     android:textColorHint="@color/black"
                     android:layout_marginBottom="@dimen/_10sdp"
                     android:maxLength="8"
+                    android:theme="@style/font_regular"
+                    style="@style/font_regular"
                     android:inputType="numberDecimal"
                     android:textSize="@dimen/_18sdp"
                     android:textAlignment="viewStart"
@@ -555,6 +601,8 @@
                     android:hint="@string/enter_practical_marks"
                     android:textColorHint="@color/black"
                     android:maxLength="8"
+                    android:theme="@style/font_regular"
+                    style="@style/font_regular"
                     android:inputType="numberDecimal"
                     android:textSize="@dimen/_18sdp"
                     android:textAlignment="viewStart"
@@ -583,7 +631,8 @@
                     android:text=""
                     android:textSize="@dimen/_20sdp"
                     android:textAlignment="viewStart"
-                    android:textStyle="bold"
+                    android:theme="@style/font_semi_bold"
+                    style="@style/font_semi_bold"
                     android:textColor="@color/black"
                     android:id="@+id/subject_name_10"
                     android:padding="@dimen/_5sdp"
@@ -598,6 +647,8 @@
                     android:layout_marginBottom="@dimen/_10sdp"
                     android:textColorHint="@color/black"
                     android:maxLength="8"
+                    android:theme="@style/font_regular"
+                    style="@style/font_regular"
                     android:inputType="numberDecimal"
                     android:textSize="@dimen/_18sdp"
                     android:textAlignment="viewStart"
@@ -615,6 +666,8 @@
                     android:hint="@string/enter_practical_marks"
                     android:textColorHint="@color/black"
                     android:maxLength="8"
+                    android:theme="@style/font_regular"
+                    style="@style/font_regular"
                     android:inputType="numberDecimal"
                     android:textSize="@dimen/_18sdp"
                     android:textAlignment="viewStart"
@@ -643,7 +696,8 @@
                     android:text=""
                     android:textSize="@dimen/_20sdp"
                     android:textAlignment="viewStart"
-                    android:textStyle="bold"
+                    android:theme="@style/font_semi_bold"
+                    style="@style/font_semi_bold"
                     android:textColor="@color/black"
                     android:id="@+id/subject_name_11"
                     android:padding="@dimen/_5sdp"
@@ -658,6 +712,8 @@
                     android:hint="@string/enter_theory_marks"
                     android:textColorHint="@color/black"
                     android:maxLength="8"
+                    android:theme="@style/font_regular"
+                    style="@style/font_regular"
                     android:inputType="numberDecimal"
                     android:textSize="@dimen/_18sdp"
                     android:textAlignment="viewStart"
@@ -675,6 +731,8 @@
                     android:hint="@string/enter_practical_marks"
                     android:textColorHint="@color/black"
                     android:maxLength="8"
+                    android:theme="@style/font_regular"
+                    style="@style/font_regular"
                     android:inputType="numberDecimal"
                     android:textSize="@dimen/_18sdp"
                     android:textAlignment="viewStart"
@@ -706,7 +764,8 @@
                     android:text=""
                     android:textSize="@dimen/_20sdp"
                     android:textAlignment="viewStart"
-                    android:textStyle="bold"
+                    android:theme="@style/font_semi_bold"
+                    style="@style/font_semi_bold"
                     android:textColor="@color/black"
                     android:id="@+id/subject_name_12"
                     android:padding="@dimen/_5sdp"
@@ -721,6 +780,8 @@
                     android:textColorHint="@color/black"
                     android:layout_marginBottom="@dimen/_10sdp"
                     android:maxLength="8"
+                    android:theme="@style/font_regular"
+                    style="@style/font_regular"
                     android:inputType="numberDecimal"
                     android:textSize="@dimen/_18sdp"
                     android:textAlignment="viewStart"
@@ -738,6 +799,8 @@
                     android:hint="@string/enter_practical_marks"
                     android:textColorHint="@color/black"
                     android:maxLength="8"
+                    android:theme="@style/font_regular"
+                    style="@style/font_regular"
                     android:inputType="numberDecimal"
                     android:textSize="@dimen/_18sdp"
                     android:textAlignment="viewStart"
@@ -762,7 +825,10 @@
                 android:id="@+id/calculate"
                 android:textColor="@color/white"
                 android:textSize="@dimen/_25sdp"
-                android:textStyle="bold"/>
+                android:textAlignment="center"
+                android:padding="@dimen/_5sdp"
+                android:theme="@style/font_bold"
+                style="@style/font_bold"/>
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
